[tool.poetry]
name = "b2-hm9"
version = "0.1.0"
description = ""
authors = ["Vadim-3 <128088822+Vadim-3@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
